More files / fixes in place

--- a/templates/install.rdf.mustache
+++ b/templates/install.rdf.mustache
@@ -12,6 +12,7 @@
     <em:description>{{addon.description}}
     </em:description>
     <em:creator>{{addon.creator}}</em:creator>
+    <em:iconURL>chrome://{{addon.chromeResource}}-icons/content/icon.png</em:iconURL>
 
     <em:targetApplication>
       <Description>
