--- a/templates/install.rdf.mustache
+++ b/templates/install.rdf.mustache
@@ -7,12 +7,11 @@
     <em:multiprocessCompatible>{{addon.multiprocessCompatible}}</em:multiprocessCompatible>
     <em:hasEmbeddedWebExtension>{{addon.hasEmbeddedWebExtension}}</em:hasEmbeddedWebExtension>
     <em:unpack>false</em:unpack>
-    <em:version>{{addon.version}}</em:version>
+    <em:version>{{version}}</em:version>
     <em:name>{{addon.name}}</em:name>
     <em:description>{{addon.description}}
     </em:description>
     <em:creator>{{addon.creator}}</em:creator>
-    <em:iconURL>chrome://{{addon.chromeResource}}-icons/content/icon.png</em:iconURL>
 
     <em:targetApplication>
       <Description>
