Added user facing description of the experiment

--- a/templates/install.rdf.mustache
+++ b/templates/install.rdf.mustache
@@ -9,7 +9,7 @@
     <em:unpack>false</em:unpack>
     <em:version>{{version}}</em:version>
     <em:name>{{addon.name}}</em:name>
-    <em:description>{{addon.description}}
+    <em:description>Assesses the degree and sense in which users in opt-in Firefox Pioneer cohort differ from the Firefox release channel population. This is a one-time data collection of fields already collected in Firefox Telemetry.
     </em:description>
     <em:creator>{{addon.creator}}</em:creator>
 
